# game

./: .gitignore  CMakeLists.txt  README.md  camera.cxx  camera.hxx  enemy.cxx  enemy.hxx  engine.cxx  engine.hxx  event.cxx  event.hxx  fragment_hero_shader.glsl  fragment_shader.glsl  fragment_shader_imgui.glsl  game.cxx  game_object.cxx  game_object.hxx  geometry.cxx  geometry.hxx  hero.cxx  hero.hxx  index_buffer.cxx  index_buffer.hxx  interface.cxx  interface.hxx  map.cxx  map.hxx  memory_buf.cxx  memory_buf.hxx  shader_program.cxx  shader_program.hxx  sound_buffer.cxx  sound_buffer.hxx  sprite.cxx  sprite.hxx  texture.cxx  texture.hxx  vertex_buffer.cxx  vertex_buffer.hxx  vertex_hero_shader.glsl  (+2 more)
android-project/: local.properties
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/assets/shaders/: fragment_hero_shader.glsl  vertex_map_shader.glsl
android-project/app/src/main/java/org/home/pripramzak/: DungeonGame.java
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
data/: level1.tmx  level_1.txt
engine/: CMakeLists.txt
engine/imgui/: CMakeLists.txt  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl3.cpp
engine/include/: animation.hxx  buttons.hxx  camera.hxx  collision.hxx  color.hxx  engine.hxx  event.hxx  geometry.hxx  index_buffer.hxx  memory_buf.hxx  shader_program.hxx  sound_buffer.hxx  sprite.hxx  texture.hxx  tile.hxx  transform2d.hxx  types.hxx  vertex_array.hxx  vertex_buffer.hxx
engine/src/: animation.cxx  camera.cxx  collision.cxx  engine.cxx  event.cxx  index_buffer.cxx  memory_buf.cxx  shader_program.cxx  sound_buffer.cxx  sprite.cxx  texture.cxx  types.cxx  vertex_array.cxx  vertex_buffer.cxx
imgui/: CMakeLists.txt
include/: arrow.hxx  camera.hxx  character.hxx  collision.hxx  enemy.hxx  game_object.hxx  hero.hxx  interface.hxx  map.hxx  resources.hxx
shaders/: animation.fs  animation.vs  collider.frag  collider.fs  collider.vert  collider.vs  fragment_hero_shader.glsl  fragment_map_shader.glsl  map.fs  map.gs  map.vs  sprite.frag  sprite.fs  sprite.vert  sprite.vs  vertex_hero_shader.glsl
src/: arrow.cxx  camera.cxx  character.cxx  collision.cxx  enemy.cxx  game.cxx  game_object.cxx  hero.cxx  interface.cxx  map.cxx  resources.cxx
